syntax = "proto3";

package auth;

option go_package = "auth-service/proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);

  rpc VerifyCode(VerifyCodeRequest) returns (VerifyCodeResponse);

  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

  rpc ResendCode(ResendCodeRequest) returns (ResendCodeResponse);

  rpc Logout(LogoutRequest) returns (LogoutResponse);

  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string email = 1;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
}

message VerifyCodeRequest {
  string email = 1;
  string code = 2;
}

message VerifyCodeResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  bool is_registered = 4;
  string user_id = 5;
  string message = 6;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  string message = 4;
}

message ResendCodeRequest {
  string email = 1;
}

message ResendCodeResponse {
  bool success = 1;
  string message = 2;
}

message LogoutRequest {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  string message = 4;
}
